--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -2,11 +2,16 @@ name: Build and Release Extension
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
     paths-ignore:
       - '**.md'
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
+
+permissions:
+  contents: write
+  packages: read
+  issues: read
 
 jobs:
   build:
@@ -40,7 +45,7 @@ jobs:
           
   release:
     needs: build
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main')
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
@@ -57,23 +62,30 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           COMMIT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
           echo "commit_sha=$COMMIT_SHA" >> $GITHUB_OUTPUT
+          CURRENT_DATE=$(date +"%Y-%m-%d %H:%M")
+          echo "build_date=$CURRENT_DATE" >> $GITHUB_OUTPUT
+          
+      # Delete existing snapshot tag if it exists
+      - name: Delete existing snapshot tag
+        run: |
+          git fetch --tags
+          if git rev-parse --verify snapshot 2>/dev/null; then
+            git tag -d snapshot
+            git push --delete origin snapshot || true
+          fi
+        continue-on-error: true
           
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v2
         with:
           files: ${{ steps.package.outputs.vsix_path }}
-          tag_name: v${{ steps.package.outputs.version }}-snapshot-${{ steps.package.outputs.commit_sha }}
-          name: Snapshot v${{ steps.package.outputs.version }}-${{ steps.package.outputs.commit_sha }}
+          tag_name: snapshot
+          name: Snapshot
           body: |
-            Automated snapshot build from commit ${{ github.sha }}
+            # 📦 Latest Snapshot Build
             
-            ## How to install
-            1. Download the .vsix file from this release
-            2. In VS Code, go to Extensions (Ctrl+Shift+X)
-            3. Click the "..." menu in the top-right of the Extensions view
-            4. Select "Install from VSIX..."
-            5. Browse to the downloaded file
-          prerelease: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            **Built on:** ${{ steps.package.outputs.build_date }}
+            **Version:** ${{ steps.package.outputs.version }}
+            **Commit:** ${{ github.sha }}
+            
